Update Gene's email.

--- a/Thanks
+++ b/Thanks
@@ -55,7 +55,7 @@ Bernhard H. Buckel <buckel@mail.uni-wuerzburg.de>
   Co-Author of the "Getting Started Manual"
 
 
-Gene Buckle <geneb@nwlink.com>
+Gene Buckle <geneb@deltasoft.com>
   Gene has done a lot of work getting FG to compile with the MSVC++
   compiler.  Also, he has pushed, proded, and bugged me endlessly to
   do my stuff right.  (I mean that in a good way, because sometimes
