Added an entry for Ralph

--- a/Thanks
+++ b/Thanks
@@ -63,6 +63,14 @@ Gene Buckle <geneb@deltasoft.com>
   a good hard shove.) :-)
 
 
+Ralph Carmichael <ralph@pdas.com>
+Thanks to Ralph for his support of the FlightGear project. At
+  Public Domain Aeronautical Software you will find the PDAS CD-ROM for sale,
+  packed with great programs of use to aeronautical engineers. At this web
+  site there are also some sample downloads to show what is on the CD.
+  http://www.pdas.com
+
+
 Didier Chauveau <chauveau@math.univ-mlv.fr>
   Provided some initial code to parse the 30 arcsec DEM files found at:
   http://edcwww.cr.usgs.gov/landdaac/gtopo30/gtopo30.html
