--- a/Thanks
+++ b/Thanks
@@ -238,8 +238,7 @@ Robin Peel <robin@cpwd.com>
 
 Alex Perry <arp11@pacbell.net>
   Contributed code to more accurately model VSI, DG, Altitude.
-  I have a feeling there's been a few other things as well, but
-  my memory is failing me.
+  Contributed to the Install and Getting Started manual.
 
 
 Friedemann Reinhard <mpt218@faupt212.physik.uni-erlangen.de>
