Replaced gdbm with metakit.  Involves a new simgear version and a new database format for the airports in the base package.

--- a/Thanks
+++ b/Thanks
@@ -375,6 +375,14 @@ Ed Williams <Ed_Williams@compuserve.com>
   http://www.best.com/~williams/index.html
 
 
+Jean-Claude Wippler <jcw@equi4.com>
+  Author of MetaKit - a portable, embeddible database with a portable
+  data file format.  This software is not GPL'd but the author is kindly
+  allowing us to bundle MetaKit with our code.  MetaKit has a liberal
+  X/MIT-style license.  Please see the following URL for more info:
+  http://www.equi4.com/metakit
+
+
 WoodSoup Project  http://www.woodsoup.org
   Provided computing resources and services so that the Flight Gear 
   project could have real home.  This includes, web services, 
