--- a/Thanks
+++ b/Thanks
@@ -76,6 +76,10 @@ Didier Chauveau <chauveau@math.univ-mlv.fr>
   http://edcwww.cr.usgs.gov/landdaac/gtopo30/gtopo30.html
 
 
+John Check <j4strngs@rockfish.net>
+  Cloud textures
+
+
 Oliver Delise <delise@mail.isis.de>
   FAQ Maintainer, Documentation, Public Relations.
   Working on adding some networking / multi-user support.
