Tweaks to base making rules.

--- a/Thanks
+++ b/Thanks
@@ -78,6 +78,8 @@ Didier Chauveau <chauveau@math.univ-mlv.fr>
 
 John Check <j4strngs@rockfish.net>
   Cloud textures
+  Joystick howto
+  Panel howto
 
 
 Oliver Delise <delise@mail.isis.de>
