--- a/Thanks
+++ b/Thanks
@@ -82,6 +82,10 @@ John Check <j4strngs@rockfish.net>
   Panel howto
 
 
+Dave Cornish <dmc@halcyon.com>
+  Created our new, super cool, runway textures.
+
+
 Oliver Delise <delise@mail.isis.de>
   FAQ Maintainer, Documentation, Public Relations.
   Working on adding some networking / multi-user support.
