Changed default starting airport. Updated Thanks. Removed reference to --with-flight-model= (depricated) from configure script.

--- a/Thanks
+++ b/Thanks
@@ -80,6 +80,7 @@ John Check <j4strngs@rockfish.net>
   Cloud textures
   Joystick howto
   Panel howto
+  New instrument panel configurations
 
 
 Dave Cornish <dmc@halcyon.com>
