Modified FlightGear/src/Scenery.  The tile loader thread no longer adds a newly loaded tile to the scene graph.  Instead it puts it in a queue for the tile manager.  I've used your counter_hack to check the loaded queue and add any tiles to the scene graph.  I was playing around with the counter_hack so there might be some commented out code, etc.  I also changed some SG_DEBUGs to SG_INFOs so I could track the tile loading.

--- a/Thanks
+++ b/Thanks
@@ -48,6 +48,7 @@ Bernie Bright <bbright@c031.aone.net.au>
   STL portability, tons o' stuff. :-)
   Currently trying to get a BeOS port together but life keeps getting 
   in the way!
+  Threading support and threaded tile pager.
 
 
 Bernhard H. Buckel <buckel@mail.uni-wuerzburg.de>
