Various last minute tweaks.

--- a/Thanks
+++ b/Thanks
@@ -152,6 +152,11 @@ Habibie <habibie@MailandNews.com>
   RedHat package building changes for SimGear.
 
 
+Mike Hill <mikehill@flightsim.com>
+  Contributed 3d aircraft models to our project.
+  http://www.flightsimnetwork.com/mikehill/home.htm
+
+
 Charlie Hotchkiss <clhotch@pacbell.net> 
   Worked on improving and enhancing the HUD code.
   Lots of code style tips and code tweaks ...
