Updated records for John Check and Dave Cornish.

--- a/Thanks
+++ b/Thanks
@@ -78,7 +78,7 @@ Didier Chauveau <chauveau@math.univ-mlv.fr>
 
 
 John Check <j4strngs@rockfish.net>
-  Cloud textures
+  Maintains the base package repository
   Joystick howto
   Panel howto
   New instrument panel configurations
@@ -86,6 +86,7 @@ John Check <j4strngs@rockfish.net>
 
 Dave Cornish <dmc@halcyon.com>
   Created our new, super cool, runway textures.
+  Created some of our cloud textures.
 
 
 Oliver Delise <delise@mail.isis.de>
