--- a/Thanks
+++ b/Thanks
@@ -254,6 +254,11 @@ Curt Olson <curt@flightgear.org>
   the sim.
 
 
+Brian Paul
+  His TR Library: http://www.mesa3d.org/brianp/TR.html
+  And also Mesa of course: http://www.mesa3d.org
+
+
 Tony Peden <apeden@earthlink.net>
   Contributions on the flight model front, including a LaRCsim based 
   Cessna 172.  JSBsim: the initial conditions code, a more complete 
